parsers/go/y.output

state 0
	$accept: .top $end 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 3
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10
	CHAIN  goto 2
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  CHAIN.    (1)
	CHAIN:  CHAIN.BRANCHED_ATOM 
	CHAIN:  CHAIN.minus BRANCHED_ATOM 
	CHAIN:  CHAIN.chainbond BRANCHED_ATOM 
	CHAIN:  CHAIN.dot BRANCHED_ATOM 

	chainbond  shift 17
	dot  shift 18
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 16
	[  shift 14
	.  reduce 1 (src line 41)

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 15
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 3
	CHAIN:  BRANCHED_ATOM.    (2)
	BRANCHED_ATOM:  BRANCHED_ATOM.( CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( dot CHAIN ) 

	(  shift 19
	.  reduce 2 (src line 43)


state 4
	RINGED_ATOM:  RINGED_ATOM.digit 
	RINGED_ATOM:  RINGED_ATOM.% digit digit 
	RINGED_ATOM:  RINGED_ATOM.ringbond digit 
	RINGED_ATOM:  RINGED_ATOM.ringbond % digit digit 
	BRANCHED_ATOM:  RINGED_ATOM.    (28)

	ringbond  shift 22
	digit  shift 20
	%  shift 21
	.  reduce 28 (src line 87)


state 5
	RINGED_ATOM:  ATOM.    (23)

	.  reduce 23 (src line 79)


state 6
	ATOM:  BRACKET_ATOM.    (19)

	.  reduce 19 (src line 73)


state 7
	ATOM:  aliphatic_organic.    (20)

	.  reduce 20 (src line 74)


state 8
	ATOM:  aromatic_organic.    (21)

	.  reduce 21 (src line 75)


state 9
	ATOM:  wildcard.    (22)

	.  reduce 22 (src line 76)


state 10
	BRACKET_ATOM:  BRACKET_ATOM4.] 
	BRACKET_ATOM:  BRACKET_ATOM4.CLASS ] 

	digit  shift 26
	]  shift 23
	.  error

	CLASS  goto 24
	NUMBER  goto 25

state 11
	BRACKET_ATOM4:  BRACKET_ATOM3.    (15)
	BRACKET_ATOM4:  BRACKET_ATOM3.CHARGE 

	minus  shift 29
	+  shift 28
	.  reduce 15 (src line 65)

	CHARGE  goto 27

state 12
	BRACKET_ATOM3:  BRACKET_ATOM2.    (13)
	BRACKET_ATOM3:  BRACKET_ATOM2.HCOUNT 

	hydrogen  shift 31
	.  reduce 13 (src line 61)

	HCOUNT  goto 30

state 13
	BRACKET_ATOM2:  BRACKET_ATOM1.    (11)
	BRACKET_ATOM2:  BRACKET_ATOM1.chirality 

	chirality  shift 32
	.  reduce 11 (src line 57)


state 14
	BRACKET_ATOM1:  [.BRACKET_ATOM0 
	BRACKET_ATOM1:  [.ISOTOPE BRACKET_ATOM0 

	hydrogen  shift 38
	aliphatic_organic  shift 39
	aromatic_organic  shift 41
	aromatic_other  shift 42
	other  shift 40
	digit  shift 26
	.  error

	ELEMENT_SYMBOLS  goto 35
	AROMATIC_SYMBOLS  goto 36
	BRACKET_ATOM0  goto 33
	ISOTOPE  goto 34
	NUMBER  goto 37

state 15
	CHAIN:  CHAIN BRANCHED_ATOM.    (3)
	BRANCHED_ATOM:  BRANCHED_ATOM.( CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( dot CHAIN ) 

	(  shift 19
	.  reduce 3 (src line 44)


state 16
	CHAIN:  CHAIN minus.BRANCHED_ATOM 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 43
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 17
	CHAIN:  CHAIN chainbond.BRANCHED_ATOM 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 44
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 18
	CHAIN:  CHAIN dot.BRANCHED_ATOM 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 45
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 19
	BRANCHED_ATOM:  BRANCHED_ATOM (.CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM (.minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM (.chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM (.dot CHAIN ) 

	chainbond  shift 48
	dot  shift 49
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 47
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 3
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10
	CHAIN  goto 46

state 20
	RINGED_ATOM:  RINGED_ATOM digit.    (24)

	.  reduce 24 (src line 80)


state 21
	RINGED_ATOM:  RINGED_ATOM %.digit digit 

	digit  shift 50
	.  error


state 22
	RINGED_ATOM:  RINGED_ATOM ringbond.digit 
	RINGED_ATOM:  RINGED_ATOM ringbond.% digit digit 

	digit  shift 51
	%  shift 52
	.  error


state 23
	BRACKET_ATOM:  BRACKET_ATOM4 ].    (17)

	.  reduce 17 (src line 69)


state 24
	BRACKET_ATOM:  BRACKET_ATOM4 CLASS.] 

	]  shift 53
	.  error


state 25
	CLASS:  NUMBER.    (48)
	NUMBER:  NUMBER.digit 

	digit  shift 54
	.  reduce 48 (src line 111)


state 26
	NUMBER:  digit.    (49)

	.  reduce 49 (src line 113)


state 27
	BRACKET_ATOM4:  BRACKET_ATOM3 CHARGE.    (16)

	.  reduce 16 (src line 66)


28: shift/reduce conflict (shift 56(0), red'n 41(0)) on digit
state 28
	CHARGE:  +.    (41)
	CHARGE:  +.+ 
	CHARGE:  +.digit 
	CHARGE:  +.digit digit 

	digit  shift 56
	+  shift 55
	.  reduce 41 (src line 102)


29: shift/reduce conflict (shift 58(0), red'n 45(0)) on digit
state 29
	CHARGE:  minus.    (45)
	CHARGE:  minus.minus 
	CHARGE:  minus.digit digit 

	minus  shift 57
	digit  shift 58
	.  reduce 45 (src line 106)


state 30
	BRACKET_ATOM3:  BRACKET_ATOM2 HCOUNT.    (14)

	.  reduce 14 (src line 62)


31: shift/reduce conflict (shift 26(0), red'n 39(0)) on digit
state 31
	HCOUNT:  hydrogen.    (39)
	HCOUNT:  hydrogen.NUMBER 

	digit  shift 26
	.  reduce 39 (src line 98)

	NUMBER  goto 59

state 32
	BRACKET_ATOM2:  BRACKET_ATOM1 chirality.    (12)

	.  reduce 12 (src line 58)


state 33
	BRACKET_ATOM1:  [ BRACKET_ATOM0.    (9)

	.  reduce 9 (src line 53)


state 34
	BRACKET_ATOM1:  [ ISOTOPE.BRACKET_ATOM0 

	hydrogen  shift 38
	aliphatic_organic  shift 39
	aromatic_organic  shift 41
	aromatic_other  shift 42
	other  shift 40
	.  error

	ELEMENT_SYMBOLS  goto 35
	AROMATIC_SYMBOLS  goto 36
	BRACKET_ATOM0  goto 60

state 35
	BRACKET_ATOM0:  ELEMENT_SYMBOLS.    (7)

	.  reduce 7 (src line 49)


state 36
	BRACKET_ATOM0:  AROMATIC_SYMBOLS.    (8)

	.  reduce 8 (src line 50)


state 37
	ISOTOPE:  NUMBER.    (38)
	NUMBER:  NUMBER.digit 

	digit  shift 54
	.  reduce 38 (src line 97)


state 38
	ELEMENT_SYMBOLS:  hydrogen.    (33)

	.  reduce 33 (src line 94)


state 39
	ELEMENT_SYMBOLS:  aliphatic_organic.    (34)

	.  reduce 34 (src line 94)


state 40
	ELEMENT_SYMBOLS:  other.    (35)

	.  reduce 35 (src line 94)


state 41
	AROMATIC_SYMBOLS:  aromatic_organic.    (36)

	.  reduce 36 (src line 95)


state 42
	AROMATIC_SYMBOLS:  aromatic_other.    (37)

	.  reduce 37 (src line 95)


state 43
	CHAIN:  CHAIN minus BRANCHED_ATOM.    (4)
	BRANCHED_ATOM:  BRANCHED_ATOM.( CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( dot CHAIN ) 

	(  shift 19
	.  reduce 4 (src line 45)


state 44
	CHAIN:  CHAIN chainbond BRANCHED_ATOM.    (5)
	BRANCHED_ATOM:  BRANCHED_ATOM.( CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( dot CHAIN ) 

	(  shift 19
	.  reduce 5 (src line 46)


state 45
	CHAIN:  CHAIN dot BRANCHED_ATOM.    (6)
	BRANCHED_ATOM:  BRANCHED_ATOM.( CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( minus CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( chainbond CHAIN ) 
	BRANCHED_ATOM:  BRANCHED_ATOM.( dot CHAIN ) 

	(  shift 19
	.  reduce 6 (src line 47)


state 46
	CHAIN:  CHAIN.BRANCHED_ATOM 
	CHAIN:  CHAIN.minus BRANCHED_ATOM 
	CHAIN:  CHAIN.chainbond BRANCHED_ATOM 
	CHAIN:  CHAIN.dot BRANCHED_ATOM 
	BRANCHED_ATOM:  BRANCHED_ATOM ( CHAIN.) 

	chainbond  shift 17
	dot  shift 18
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 16
	[  shift 14
	)  shift 61
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 15
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 47
	BRANCHED_ATOM:  BRANCHED_ATOM ( minus.CHAIN ) 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 3
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10
	CHAIN  goto 62

state 48
	BRANCHED_ATOM:  BRANCHED_ATOM ( chainbond.CHAIN ) 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 3
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10
	CHAIN  goto 63

state 49
	BRANCHED_ATOM:  BRANCHED_ATOM ( dot.CHAIN ) 

	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	[  shift 14
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 3
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10
	CHAIN  goto 64

state 50
	RINGED_ATOM:  RINGED_ATOM % digit.digit 

	digit  shift 65
	.  error


state 51
	RINGED_ATOM:  RINGED_ATOM ringbond digit.    (26)

	.  reduce 26 (src line 82)


state 52
	RINGED_ATOM:  RINGED_ATOM ringbond %.digit digit 

	digit  shift 66
	.  error


state 53
	BRACKET_ATOM:  BRACKET_ATOM4 CLASS ].    (18)

	.  reduce 18 (src line 70)


state 54
	NUMBER:  NUMBER digit.    (50)

	.  reduce 50 (src line 114)


state 55
	CHARGE:  + +.    (42)

	.  reduce 42 (src line 103)


56: shift/reduce conflict (shift 67(0), red'n 43(0)) on digit
state 56
	CHARGE:  + digit.    (43)
	CHARGE:  + digit.digit 

	digit  shift 67
	.  reduce 43 (src line 104)


state 57
	CHARGE:  minus minus.    (46)

	.  reduce 46 (src line 107)


state 58
	CHARGE:  minus digit.digit 

	digit  shift 68
	.  error


59: shift/reduce conflict (shift 54(0), red'n 40(0)) on digit
state 59
	HCOUNT:  hydrogen NUMBER.    (40)
	NUMBER:  NUMBER.digit 

	digit  shift 54
	.  reduce 40 (src line 99)


state 60
	BRACKET_ATOM1:  [ ISOTOPE BRACKET_ATOM0.    (10)

	.  reduce 10 (src line 54)


state 61
	BRANCHED_ATOM:  BRANCHED_ATOM ( CHAIN ).    (29)

	.  reduce 29 (src line 88)


state 62
	CHAIN:  CHAIN.BRANCHED_ATOM 
	CHAIN:  CHAIN.minus BRANCHED_ATOM 
	CHAIN:  CHAIN.chainbond BRANCHED_ATOM 
	CHAIN:  CHAIN.dot BRANCHED_ATOM 
	BRANCHED_ATOM:  BRANCHED_ATOM ( minus CHAIN.) 

	chainbond  shift 17
	dot  shift 18
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 16
	[  shift 14
	)  shift 69
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 15
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 63
	CHAIN:  CHAIN.BRANCHED_ATOM 
	CHAIN:  CHAIN.minus BRANCHED_ATOM 
	CHAIN:  CHAIN.chainbond BRANCHED_ATOM 
	CHAIN:  CHAIN.dot BRANCHED_ATOM 
	BRANCHED_ATOM:  BRANCHED_ATOM ( chainbond CHAIN.) 

	chainbond  shift 17
	dot  shift 18
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 16
	[  shift 14
	)  shift 70
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 15
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 64
	CHAIN:  CHAIN.BRANCHED_ATOM 
	CHAIN:  CHAIN.minus BRANCHED_ATOM 
	CHAIN:  CHAIN.chainbond BRANCHED_ATOM 
	CHAIN:  CHAIN.dot BRANCHED_ATOM 
	BRANCHED_ATOM:  BRANCHED_ATOM ( dot CHAIN.) 

	chainbond  shift 17
	dot  shift 18
	aliphatic_organic  shift 7
	aromatic_organic  shift 8
	wildcard  shift 9
	minus  shift 16
	[  shift 14
	)  shift 71
	.  error

	ATOM  goto 5
	RINGED_ATOM  goto 4
	BRANCHED_ATOM  goto 15
	BRACKET_ATOM  goto 6
	BRACKET_ATOM1  goto 13
	BRACKET_ATOM2  goto 12
	BRACKET_ATOM3  goto 11
	BRACKET_ATOM4  goto 10

state 65
	RINGED_ATOM:  RINGED_ATOM % digit digit.    (25)

	.  reduce 25 (src line 81)


state 66
	RINGED_ATOM:  RINGED_ATOM ringbond % digit.digit 

	digit  shift 72
	.  error


state 67
	CHARGE:  + digit digit.    (44)

	.  reduce 44 (src line 105)


state 68
	CHARGE:  minus digit digit.    (47)

	.  reduce 47 (src line 108)


state 69
	BRANCHED_ATOM:  BRANCHED_ATOM ( minus CHAIN ).    (30)

	.  reduce 30 (src line 89)


state 70
	BRANCHED_ATOM:  BRANCHED_ATOM ( chainbond CHAIN ).    (31)

	.  reduce 31 (src line 90)


state 71
	BRANCHED_ATOM:  BRANCHED_ATOM ( dot CHAIN ).    (32)

	.  reduce 32 (src line 91)


state 72
	RINGED_ATOM:  RINGED_ATOM ringbond % digit digit.    (27)

	.  reduce 27 (src line 83)


22 terminals, 19 nonterminals
51 grammar rules, 73/2000 states
5 shift/reduce, 0 reduce/reduce conflicts reported
68 working sets used
memory: parser 97/30000
41 extra closures
116 shift entries, 1 exceptions
33 goto entries
90 entries saved by goto default
Optimizer space used: output 119/30000
119 table entries, 0 zero
maximum spread: 22, maximum offset: 64
